# advent_of_code_2024

3/: CMakeLists.txt
3/src/: main.c
4/: build.bat
4/src/: main.c
5/: some_txt.txt
5/src/: dynamic_string.c  dynamic_string.h  file_handler.c  ig_hashmap.h  log.c  log.h  main.c
5_cpp/: CMakeLists.txt
5_cpp/src/: main.cpp
template/: CMakeLists.txt  input.txt
template/src/: dynamic_array.h  file_handler.h  ig_enums.h  main.c
